Projects/IntroProject/GpMessages/738016961978500
<?xml version="1.0" encoding="utf-8"?><messages><msg code="0" type="2">Start Time: Thursday, June 20, 2024 4:22:01 PM</msg><msg code="539" type="100">ERROR 000539: ﻿  File "&lt;expression&gt;", line 1
    str(int(1119190*1000000/270625568.0) ,))
                                           ^
﻿SyntaxError: unmatched ')'
</msg><msg code="-2147467259" type="100">Failed to execute (CalculateField).</msg><msg code="0" type="3">Failed at Thursday, June 20, 2024 4:22:02 PM (Elapsed Time: 0.33 seconds)</msg></messages>